mobdamatest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobdamatest        # < name of the deployment
  namespace: mobdamatest   # < namespace where place the deployment and pods
  labels:
    app: mobdamatest       # < label for tagging and reference
spec:
  replicas: 1           # < number of pods to deploy
  selector:
    matchLabels:
      app: mobdamatest
  strategy:
    rollingUpdate:
      maxSurge: 0       # < The number of pods that can be created above the desired amount of pods during an update
      maxUnavailable: 1 # < The number of pods that can be unavailable during the update process
    type: RollingUpdate # < New pods are added gradually, and old pods are terminated gradually
  template:
    metadata:
      labels:
        app: mobdamatest
    spec:
      containers:
      - image: gitea.olympus.mangelschots.org/blackcom/mobdamatest # < the name of the docker image we will use
        name: mobdamatest                  # < name of container
        imagePullPolicy: Always             # < always use the latest image when creating container/pod
        ports:                              # < the ports required (see container documentation)
         - containerPort: 5000
           name: http-frontend
           protocol: TCP
