mobdamatest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mobdamatest-service    # < name of the service
  namespace: mobdamatest       # < namespace where place the deployment and pods
spec:
  selector:
    app: mobdamatest          # < reference to the deployment (connects with this deployment)
  ports:
    - name: http-frontend
      protocol: TCP
      port: 5000
