mobdamatest/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mobdamatest-ingress
  namespace: mobdamatest
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mobdamatest.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: mobdamatest-service
          port: 5000
  tls:
    secretName: mangelschots-org-tls
